<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Card Game Scores</string>
    <string name="app_pref_key">CardGameScores_Preferences.xml</string>
    <string name="menu_settings">Settings</string>
    <string name="new_game_button">New Game</string>
    <string name="title_activity_add_players">Add Players</string>
    <string name="add_player_add">Add</string>
    <string name="add_player_hint">Type here to add new player</string>
    <string name="add_player_start">Start Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game">Game</string>
    <string name="game_update_scores">Update scores</string>
    <string name="play_forever">Play Forever?</string>
    <string name="default_max_score">200</string>
    <string name="default_max_score_title">Maximum Score</string>
    <string name="default_difference_score">0</string>
    <string name="default_difference_score_title">Difference to finish</string>
    <string name="welcome_message">This is a simple score keeping app. Start the game by adding players on the next screen and setting the maximum points to win (or lose). On the game screen, use the text input to update the scores at the end of each round (empty inputs will be considered zero). Whenever one of the scores is higher than the maximum score set, the game stops and the winner (or loser) is announced.</string>
    <string name="last_game_button">Last Game</string>
    <string name="saved_max">card_game_max</string>
    <string name="saved_difference">card_game_difference</string>
    <string name="saved_users">card_game_users</string>
    <string name="default_score_type_title">Reach Maximum and </string>
    <string name="saved_win">card_game_win</string>
    <string name="lose_game">Lose</string>
    <string name="win_game">Win</string>

</resources>